Ensure that histogram labels wrap correctly

--- a/client/src/scss/common.scss
+++ b/client/src/scss/common.scss
@@ -99,13 +99,8 @@ form {
   margin-top: $spacer - $headings-margin-bottom;
 }
 
-.histogram-freq {
-  grid-column: 1 / span 1;
-}
-
-.histogram-total, .histogram-bar-container {
-  grid-column: 2 / span 1;
-}
+// The text color invert effect
+// https://stackoverflow.com/a/25707161/4093378
 
 .histogram-bar-container {
   position: relative;
@@ -121,10 +116,10 @@ form {
 }
 
 .histogram-label {
-  position: absolute;
+  word-break: break-word;
+  margin: auto 6px;
   color: white;
   mix-blend-mode: difference;
-  left: 6px;
 }
 
 .histogram-overlay {
@@ -134,4 +129,5 @@ form {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  z-index: 1;
 }
